Initalized People in Boat class

--- a/Nachos/nachos/threads/.gitignore
+++ b/Nachos/nachos/threads/.gitignore
@@ -26,3 +26,7 @@
 /ThreadQueue.class
 /ThreadedKernel.class
 /Alarm$Pair.class
+/Boat$person.class
+/Boat$Person.class
+/Boat$2.class
+/Person.class
