--- a/Nachos/nachos/threads/.gitignore
+++ b/Nachos/nachos/threads/.gitignore
@@ -33,3 +33,4 @@
 /PriorityScheduler$SortByEffectivePriority.class
 /PriorityScheduler$SortByPriority.class
 /Alarm$PingTest.class
+/KThread$3.class
