Added Tests for Condition2.. still need more

--- a/Nachos/nachos/threads/.gitignore
+++ b/Nachos/nachos/threads/.gitignore
@@ -34,3 +34,10 @@
 /PriorityScheduler$SortByPriority.class
 /Alarm$PingTest.class
 /KThread$3.class
+/Condition2$countWakes.class
+/Condition2$1.class
+/Condition2$wakeCounter.class
+/Condition2$selfTest.class
+/Condition2$2.class
+/Condition2$3.class
+/Condition2$4.class
