--- a/Nachos/nachos/threads/.gitignore
+++ b/Nachos/nachos/threads/.gitignore
@@ -42,3 +42,8 @@
 /Condition2$3.class
 /Condition2$4.class
 /Condition2$5.class
+/Alarm$2.class
+/Alarm$AlarmTest.class
+/Alarm$WaitingThread.class
+/KThread$4.class
+/Alarm$1RunAlarm.class
