7/9 tests passing with lottery selftest commented out, also join working

--- a/Nachos/nachos/threads/.gitignore
+++ b/Nachos/nachos/threads/.gitignore
@@ -48,3 +48,5 @@
 /KThread$4.class
 /Alarm$1RunAlarm.class
 /Communicator$ComTest.class
+/LotteryScheduler$LotteryQueue.class
+/LotteryScheduler$ThreadState.class
