8/9 tests passing, last one is test 11

--- a/Nachos/nachos/threads/.gitignore
+++ b/Nachos/nachos/threads/.gitignore
@@ -50,3 +50,4 @@
 /Communicator$ComTest.class
 /LotteryScheduler$LotteryQueue.class
 /LotteryScheduler$ThreadState.class
+/LotteryScheduler$PriorityThreadQueue.class
