Created Central Network Command Prototype
Not finished yet (unused variables, locks aren't used correctly, doesn't support deadlock case, etc...)

--- a/Nachos/nachos/network/.gitignore
+++ b/Nachos/nachos/network/.gitignore
@@ -6,3 +6,10 @@
 /PostOffice$2.class
 /PostOffice$3.class
 /PostOffice.class
+/NetCommandCenter.class
+/NetCommandCenter$Connection.class
+/NetCommandCenter$1.class
+/NetCommandCenter$2.class
+/NetCommandCenter$3.class
+/NetCommandCenter$4.class
+/NetKernel$2.class
