Created 2nd prototype
Uses more OOP concepts by wrapping up connection data structures and keeping connection accessible for NetProcess. Still not creating "Socket" yet.

--- a/Nachos/nachos/network/.gitignore
+++ b/Nachos/nachos/network/.gitignore
@@ -13,3 +13,6 @@
 /NetCommandCenter$3.class
 /NetCommandCenter$4.class
 /NetKernel$2.class
+/Connection.class
+/ConnectionList.class
+/ConnectionMap.class
